--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:support-v13:25.1.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
     testCompile 'junit:junit:4.12'
 }
